@startuml
'https://plantuml.com/class-diagram

abstract class BasicController
class ControllerOperation

class UserController
class LessonController
class MajorController
class StraightController
class UltimateController

UserController -up-|> BasicController
LessonController -up-|> BasicController
MajorController -up-|> BasicController

StraightController .up.> ControllerOperation
UltimateController .up.> ControllerOperation
BasicController .up.> ControllerOperation


UserController ..> BeanTools
LessonController ..> BeanTools
MajorController ..> BeanTools

BasicController ..> JWTUtils
UserController ..> JWTUtils
LessonController ..> JWTUtils
ControllerOperation ..> JWTUtils

interface UserSpecService
interface GeneralService

class UserServiceImpl
class MajorServiceImpl
class LessonServiceImpl
class DependValueVerify
class UserSpecServiceImpl

UserController --* GeneralService
UserController --* UserSpecService
LessonController --* GeneralService
MajorController --* GeneralService

GeneralService  ..|> UserServiceImpl
GeneralService  ..|> MajorServiceImpl
GeneralService  ..|> LessonServiceImpl
UserSpecService ..|> UserSpecServiceImpl

interface UserMapper
interface LessonMapper
interface MajorMapper
interface ClassroomMapper
interface ClasstimeMapper
interface UltimatecontrolMapper

UserServiceImpl --* UserMapper
UserSpecServiceImpl --* UserMapper
LessonServiceImpl --* LessonMapper
MajorServiceImpl --* MajorMapper

StraightController --* ClasstimeMapper
StraightController --* ClassroomMapper

UltimateController --* UltimatecontrolMapper

UserServiceImpl ..> UserFormVerify
UserServiceImpl ..> DependValueVerify
LessonServiceImpl ..> DependValueVerify

DependValueVerify --* UserMapper
DependValueVerify --* MajorMapper
DependValueVerify --* ClassroomMapper

class User
class Lesson
class Major
class Classtime
class Classroom
class Ultimate

class BeanTools
class JWTUtils
class UserFormVerify

UserMapper --> User
LessonMapper --> Lesson
MajorMapper --> Major
ClasstimeMapper --> Classtime
ClassroomMapper --> Classroom
UltimatecontrolMapper  --> Ultimate

UserFormVerify .. User


@enduml